--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@plaiceholder/next": "^3.0.0",
+    "axios": "^1.5.1",
+    "mongoose": "^7.6.3",
     "next": "13.5.6",
     "next-mdx-remote": "^4.4.1",
     "plaiceholder": "^3.0.0",
     "react": "^18",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-lazy-load-image-component": "^1.6.0",
